--- a/exercises/00_python_basics/tutorial1.ipynb
+++ b/exercises/00_python_basics/tutorial1.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Module 1: Introduction to Python\n",
+    "# an introduction to python\n",
     "\n",
-    "The following tutorial contains examples of using various data types, functions, and library modules available in Python. The notebook can be downloaded from http://www.cse.msu.edu/~ptan/dmbook/tutorials/tutorial1/tutorial1.ipynb. Read the step-by-step instructions below carefully. To execute the code, click on the cell and press the SHIFT-ENTER keys simultaneously."
+    "the following tutorial, originally from [here](http://www.cse.msu.edu/~ptan/dmbook/tutorials/tutorial1/tutorial1.ipynb) contains examples of using various data types, functions, and library modules available in python. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Elementary Data Types\n",
+    "## 1.1 elementary Data Types\n",
     "\n",
     "The standard Python library provides support for various elementary data types, including including integers, booleans, floating points, and strings. A summary of the data types is shown in the table below.\n",
     "\n",
@@ -55,9 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 8 12 6 18 2\n",
+      "3.7 1.7000000000000002 1.2333333333333334 1.0 13.690000000000001\n",
+      "3.7 13.690000000000001 4 3\n"
+     ]
+    }
+   ],
    "source": [
     "x = 4            # integer\n",
     "x1 = x + 4       # addition \n",
@@ -92,11 +102,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "16.0\n",
+      "54.598150033144236\n",
+      "2.0\n",
+      "4.0\n",
+      "24\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "3.6739403974420594e-16\n",
+      "0.9999999869751758\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -126,18 +156,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "The following are some of the logical operations available for booleans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "y1 = True\n",
     "y2 = False\n",
@@ -156,9 +194,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "his\n",
+      "4\n",
+      "Length of string is 4\n",
+      "THIS\n",
+      "this\n",
+      "This\n",
+      "This is another string\n",
+      "That at a string\n",
+      "8\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "This is a string too\n",
+      "This This This \n"
+     ]
+    }
+   ],
    "source": [
     "s1 = \"This\"\n",
     "\n",
@@ -193,9 +252,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[1, 3, 5, 7, 9]\n",
+      "[0, 2, 4, 6, 8]\n",
+      "5\n",
+      "[1, 3]\n",
+      "[5, 7, 9]\n",
+      "5\n",
+      "25\n",
+      "[1, 3, 5, 7, 9, 11]\n",
+      "11\n",
+      "[1, 3, 5, 7, 9]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15]\n",
+      "[1, 3, 5, 7, 9, 1, 3, 5, 7, 9, 1, 3, 5, 7, 9]\n",
+      "[1, 3, 4, 5, 7, 9]\n",
+      "[9, 7, 5, 4, 3, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "intlist = [1, 3, 5, 7, 9]\n",
     "print(type(intlist))\n",
@@ -223,9 +304,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'is', 'a', 'list']\n",
+      "<class 'list'>\n",
+      "True\n",
+      "a\n",
+      "['this', 'is']\n",
+      "['a', 'list']\n",
+      "this is a list too\n",
+      "['this', 'a', 'list', 'too']\n"
+     ]
+    }
+   ],
    "source": [
     "mylist = ['this', 'is', 'a', 'list']\n",
     "print(mylist)\n",
@@ -253,9 +349,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'MI': 'Michigan', 'MN': 'Minnesota', 'TX': 'Texas', 'CA': 'California'}\n",
+      "dict_keys(['MI', 'MN', 'TX', 'CA'])\n",
+      "dict_values(['Michigan', 'Minnesota', 'Texas', 'California'])\n",
+      "4\n",
+      "Michigan\n",
+      "False\n",
+      "True\n",
+      "{'apples': 3, 'oranges': 4, 'bananas': 2, 'cherries': 10}\n",
+      "['apples', 'bananas', 'cherries', 'oranges']\n",
+      "[('apples', 3), ('bananas', 2), ('cherries', 10), ('oranges', 4)]\n",
+      "[('bananas', 2), ('apples', 3), ('oranges', 4), ('cherries', 10)]\n"
+     ]
+    }
+   ],
    "source": [
     "abbrev = {}\n",
     "abbrev['MI'] = \"Michigan\"\n",
@@ -292,9 +406,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('MI', 'Michigan', 'Lansing')\n",
+      "('Michigan', 'Lansing')\n",
+      "[('MI', 'Michigan', 'Lansing'), ('CA', 'California', 'Sacramento'), ('TX', 'Texas', 'Austin')]\n",
+      "('TX', 'Texas', 'Austin')\n",
+      "('TX', 'Texas', 'Austin')\n",
+      "('Texas', 'Austin')\n",
+      "[('TX', 'Texas', 'Austin'), ('MI', 'Michigan', 'Lansing'), ('CA', 'California', 'Sacramento')]\n"
+     ]
+    }
+   ],
    "source": [
     "MItuple = ('MI', 'Michigan', 'Lansing')\n",
     "CAtuple = ('CA', 'California', 'Sacramento')\n",
@@ -324,9 +452,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 10 is even\n",
+      "x = 10 is positive\n"
+     ]
+    }
+   ],
    "source": [
     "# using if-else statement\n",
     "\n",
@@ -347,9 +484,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "that\n",
+      "at\n",
+      "a\n",
+      "latt\n",
+      "[4, 2, 1, 4]\n",
+      "['Austin', 'Lansing', 'Sacramento']\n",
+      "['apples', 'oranges', 'bananas', 'cherries']\n"
+     ]
+    }
+   ],
    "source": [
     "# using for loop with a list\n",
     "\n",
@@ -378,9 +529,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "First non-negative number: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# using while loop\n",
     "\n",
@@ -405,9 +565,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "myfunc = lambda x: 3*x**2 - 2*x + 3      # example of an unnamed quadratic function\n",
     "\n",
@@ -416,9 +584,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-11, 12, 23, 45, 71]\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -449,9 +625,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State= Michigan ( MI ) Capital: Lansing\n",
+      "\n",
+      "State= California ( CA ) Capital: Sacramento\n",
+      "\n",
+      "State= Texas ( TX ) Capital: Austin\n",
+      "\n",
+      "State= Minnesota ( MN ) Capital: St Paul\n"
+     ]
+    }
+   ],
    "source": [
     "states = [('MI', 'Michigan', 'Lansing'),('CA', 'California', 'Sacramento'),\n",
     "          ('TX', 'Texas', 'Austin'), ('MN', 'Minnesota', 'St Paul')]\n",
@@ -482,9 +672,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
