--- a/exercises/01_filesystem/list_my_files.ipynb
+++ b/exercises/01_filesystem/list_my_files.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/oholm/work/python_exercises/exercises/01 intro and setup\n"
+      "/Users/oh/work/python_exercises/exercises/01_filesystem\n"
      ]
     }
    ],
@@ -60,16 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.DS_Store', 'first_exercise.md', 'list_my_files.ipynb', 'listmyfiles.py', 'exciting_data', '.ipynb_checkpoints', 'Python Cheat Sheet | OverAPI.com.pdf']\n",
-      "['05_joining_data', 'xx_anomalies', 'xx_graphs_dash', '.DS_Store', 'xx_randomness', 'xx_spark_and_python', 'xx_numerical_computation', 'xx_brandwatch_api', 'xx_dask', 'xx_read_pdf', 'xx_clustering', 'xx_machine_learning ', 'xx_keras', 'xx_data_cleaning', '06_web_scraping', 'xx_data_manipulation', '03 dates_and_times', '01 intro and setup', '07_advanced_dataframe_manipulation', '04_dataframes', '02 read_write_data', 'xx_using_google_translate']\n",
-      "['.DS_Store', 'solutions', 'code snippets', 'README.md', 'Pipfile', 'notes', '.gitignore', 'exercises', 'graphs', '.git', 'Pipfile.lock', 'using_apis']\n"
+      "['list_my_files.ipynb', 'Pipfile', 'draft_first_exercise.md', 'exciting_data', '.ipynb_checkpoints', 'Pipfile.lock']\n",
+      "['17_type_hints', '02_read_write_data', '05_joining_data', 'xx_from_amyb', '.DS_Store', 'xx_language_detection', 'xx_randomness', 'xx_spark_and_python', 'xx_numerical_computation', 'xx_spacy', '09_brandwatch_sdk', '12_audiences_api', 'xx_dask', 'xx_read_pdf', 'packing_unpakcing.py', '14_parallel_processing_dask', 'xx_exploration', 'xx_machine_learning ', 'xx_keras', 'xx_data_cleaning', '06_web_scraping', 'xx_data_manipulation', '03 dates_and_times', '01_filesystem', '00_python_basics', '10_brandwatch_sdk_beyond', '11_regression', 'xx_mastermind', '07_advanced_dataframe_manipulation', '.ipynb_checkpoints', 'xx_plotnine', '08_graphs', 'xx_asyncio', '13_LCA', '04_dataframes', 'xx_using_apis', 'xx_using_google_translate', 'xx_nytimes_api']\n",
+      "['.DS_Store', 'solutions', 'code snippets', 'README.md', 'notes', '.gitignore', 'exercises', '.git']\n"
      ]
     }
    ],
@@ -83,23 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.DS_Store',\n",
-       " 'first_exercise.md',\n",
-       " 'list_my_files.ipynb',\n",
+       "['list_my_files.ipynb',\n",
        " 'tempfolder',\n",
-       " 'listmyfiles.py',\n",
+       " 'Pipfile',\n",
+       " 'draft_first_exercise.md',\n",
        " 'exciting_data',\n",
        " '.ipynb_checkpoints',\n",
-       " 'Python Cheat Sheet | OverAPI.com.pdf']"
+       " 'Pipfile.lock']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -204,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.DS_Store', 'first_exercise.md', 'list_my_files.ipynb', 'tempfolder', 'listmyfiles.py', 'exciting_data', '.ipynb_checkpoints', 'Python Cheat Sheet | OverAPI.com.pdf']\n"
+      "['list_my_files.ipynb', 'tempfolder', 'Pipfile', 'draft_first_exercise.md', 'exciting_data', '.ipynb_checkpoints', 'Pipfile.lock']\n"
      ]
     }
    ],
@@ -222,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.DS_Store', 'first_exercise.md', 'list_my_files.ipynb', 'listmyfiles.py', 'exciting_data', '.ipynb_checkpoints', 'Python Cheat Sheet | OverAPI.com.pdf']\n"
+      "['list_my_files.ipynb', 'Pipfile', 'draft_first_exercise.md', 'exciting_data', '.ipynb_checkpoints', 'Pipfile.lock']\n"
      ]
     }
    ],
@@ -242,15 +241,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/oholm/work/python_exercises/exercises/01 intro and setup\n",
-      "/Users/oholm\n"
+      "/Users/oh/work/python_exercises/exercises/01_filesystem\n",
+      "/Users/oh\n"
      ]
     }
    ],
@@ -264,14 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/oholm/Desktop\n"
+      "/Users/oh/Desktop\n"
      ]
     }
    ],
@@ -283,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/oholm/.bash_profile\n",
-      "True\n",
-      "True\n",
+      "/Users/oh/.bash_profile\n",
+      "False\n",
+      "False\n",
       "True\n"
      ]
     }
@@ -309,20 +308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".DS_Store is a file\n",
-      "first_exercise.md is a file\n",
       "list_my_files.ipynb is a file\n",
-      "listmyfiles.py is a file\n",
+      "Pipfile is a file\n",
+      "draft_first_exercise.md is a file\n",
       "exciting_data is a directory\n",
       ".ipynb_checkpoints is a directory\n",
-      "Python Cheat Sheet | OverAPI.com.pdf is a file\n"
+      "Pipfile.lock is a file\n"
      ]
     }
    ],
@@ -351,16 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object walk at 0x10ff1f390>"
+       "<generator object walk at 0x10e278510>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -405,12 +403,8 @@
       "files ['file5.dat']\n",
       "-------------\n",
       "root: exciting_data/sub_2\n",
-      "dirs: ['subsub_2', 'subsub_3', 'subsub_1']\n",
+      "dirs: ['subsub_3', 'subsub_1']\n",
       "files ['file4.dat']\n",
-      "-------------\n",
-      "root: exciting_data/sub_2/subsub_2\n",
-      "dirs: []\n",
-      "files []\n",
       "-------------\n",
       "root: exciting_data/sub_2/subsub_3\n",
       "dirs: ['thisisenough']\n",
@@ -445,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -609,6 +603,57 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# bonus: now solve using python 3 `pathlib`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exciting_data/file2.dat\n",
+      "exciting_data/file1.dat\n",
+      "exciting_data/sub_1/file3.dat\n",
+      "exciting_data/sub_3/file5.dat\n",
+      "exciting_data/sub_2/file4.dat\n",
+      "exciting_data/sub_2/subsub_3/thisisenough/file7.dat\n",
+      "exciting_data/sub_2/subsub_1/file6.dat\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path(\"exciting_data\")\n",
+    "desired_extension = 'dat'\n",
+    "for child in path.rglob(\"*\"):\n",
+    "    if child.is_file():\n",
+    "        if child.name.endswith(desired_extension):\n",
+    "            print(child)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -627,9 +672,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
